# motis

./: .pkg
base/launcher/src/: web_server.cc
modules/geocoding/: CMakeLists.txt  requestGeo.sh
modules/geocoding/src/: geocoding.cc
modules/getstationosm/include/motis/getstationosm/: getstationosm.h
modules/graphql/: CMakeLists.txt  Readme.md  request.sh  request_old_command.sh  schema.otp.graphql
modules/graphql/include/motis/graphql/: graphql.h
modules/graphql/src/: graphql.cc
modules/nigiri/include/motis/nigiri/: nigiri.h
